--- a/tox.ini
+++ b/tox.ini
@@ -1,49 +1,19 @@
 [tox]
 envlist =
-    check-{style,build}
-    test{,-spatial,-cov}-xdist
-    build-{docs,dist}
-
-[testenv:check-style]
-skip_install = true
-deps =
-    ruff
-commands =
-    ruff . {posargs}
-
-[testenv:check-build]
-skip_install = true
-deps =
-    build
-    twine
-commands =
-    python -m build {posargs}
-    twine check --strict dist/*
+    test{,-spatial}{,-cov}-parallel
 
 [testenv]
 extras =
     test
     spatial: spatial
 deps =
-    xdist: pytest-xdist
+    parallel: pytest-xdist
 commands_pre =
     pip freeze
 commands =
     pytest \
     spatial: -m spatial \
-    cov: --cov=. --cov-config=pyproject.toml --cov-report=term-missing --cov-report=xml \
+    cov: --cov --cov-report term-missing --cov-report xml \
     warnings: -W error \
-    xdist: -n auto \
+    parallel: -n auto \
     {posargs}
-
-[testenv:build-docs]
-extras =
-    docs
-commands =
-    sphinx-build -W docs/source docs/build
-
-[testenv:build-dist]
-deps =
-    build
-commands =
-    python -m build {posargs}
